# Api_Gateway

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
app/: main.py
app/api/v1/: api_router.py
app/api/v1/routes/: courses.py  exercises.py  graphql.py  lessons.py  users.py
app/auth/: config.py  dependencies.py  routes.py  utils.py
app/core/: config.py  graphql_client.py  http_client.py
app/graphql/: queries.py
app/schemas/: course.py  progress.py  user.py
app/services/: progress.py
