[project]
name = "api-gateway"
version = "0.1.0"
description = "api_gateway"
authors = [
    {name = "wszeborj",email = "wszeborj@o2.pl"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "authlib (>=1.6.5,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "strawberry-graphql[fastapi] (>=0.287.3,<0.288.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
